--- a/src/app/Main/main-layout/main-layout.component.html
+++ b/src/app/Main/main-layout/main-layout.component.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-      <header>
+      <!-- <header>
         
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container-fluid">
@@ -31,7 +31,7 @@
 
         
 
-      </header>
+      </header> -->
     </div>
 </div>    
     <div class="" style="height: 100vh">
