Update property, populate propery

--- a/src/app/FeatureModules/admin/dashboard/dashboard.component.html
+++ b/src/app/FeatureModules/admin/dashboard/dashboard.component.html
@@ -1,12 +1,13 @@
 <h1>Properties</h1>
 <div *ngFor="let property of properties">
-    <div class="card">
-        <img src="https://localhost:7000/${{property.PropertyImageUrl}}" class="card-img-top" alt="Fissure in Sandstone" />
-        <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-            <a href="#!" class="btn btn-primary">Button</a>
+    <div class="card mt-2">
+        <img src="https://localhost:7000/{{property.propertyImageUrl}}" class="card-img-top" />
+        <div class="card-body ">
+            <p></p>
+            <h5 class="card-title">{{property.propertyName}}</h5>
+            <p class="card-text">Rent: {{property.rentCost}}</p>
+            <a [routerLink]="['/admin/addproperty', property.propertyId]" class="btn btn-primary"><i
+                    class="fa fa-edit"></i>Edit</a>
         </div>
     </div>
 </div>
