--- a/src/app/FeatureModules/admin/Property/add-property/add-property.component.html
+++ b/src/app/FeatureModules/admin/Property/add-property/add-property.component.html
@@ -1,7 +1,5 @@
-<app-admin-layout></app-admin-layout>
-
 <div class="container">
-    <h1 class="mt-3">Add Property</h1>
+    <h1 class="mt-3">{{ propertyId == "" ? 'Add' : 'Edit'}} Property</h1>
     <form #form="ngForm" (ngSubmit)="onFormSubmit()">
         <div class="mt-2">
 
@@ -71,7 +69,9 @@
             </div>
              -->
             <div class="mt-3">
-                <button type="submit" class="btn btn-primary">Save</button>
+                <button type="submit" class="btn btn-primary">
+                    {{ propertyId == "" ? 'Save' : "Update"}}
+                </button>
             </div>
 
         </div>
