--- a/src/app/FeatureModules/admin/admin-layout/admin-layout.component.html
+++ b/src/app/FeatureModules/admin/admin-layout/admin-layout.component.html
@@ -13,10 +13,10 @@
                 <div mdbCollapse #jumbotronExample="mdbCollapse" class="collapse navbar-collapse" id="jumbotronExample">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item active">
-                            <a class="nav-link" aria-current="page" routerLink="">Home</a>
+                            <a class="nav-link" aria-current="page" [routerLink]="['/admin']">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" [routerLink]="['/admin/property']">Property</a>
+                            <a class="nav-link" [routerLink]="['/admin/addproperty']">Add New Property</a>
                         </li>
                     </ul>
                 </div>
