--- a/src/app/FeatureModules/admin/Property/add-property/add-property.component.html
+++ b/src/app/FeatureModules/admin/Property/add-property/add-property.component.html
@@ -1,8 +1,9 @@
 <app-admin-layout></app-admin-layout>
 
 <div class="container">
-    <h1 class="mt-3">Add Property</h1>
-    <form #form="ngForm" (ngSubmit)="onFormSubmit()">
+    
+    <form #form="ngForm" (ngSubmit)="onFormSubmit()" class="property-form">
+        <h1 class="mt-3">Add Property</h1>
         <div class="mt-2">
 
             <div class="mt-3">
