--- a/src/app/FeatureModules/admin/admin-layout/admin-layout.component.html
+++ b/src/app/FeatureModules/admin/admin-layout/admin-layout.component.html
@@ -13,11 +13,19 @@
                 <div mdbCollapse #jumbotronExample="mdbCollapse" class="collapse navbar-collapse" id="jumbotronExample">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item active">
-                            <a class="nav-link" aria-current="page" routerLink="">Home</a>
+                            <a class="nav-link" aria-current="page" [routerLink]="['/admin']">Home</a>
                         </li>
+                        <div *ngIf="role==='Admin'">
                         <li class="nav-item">
                             <a class="nav-link" [routerLink]="['/admin/property']">Property</a>
                         </li>
+                    </div>
+                    <!-- <div *ngIf="role==='User'">
+                        <li class="nav-item">
+                            <a [routerLink]="['/admin/property/details', service.userlist.userId]" class="btn btn-primary">My Property</a>
+             
+                        </li>
+                    </div> -->
                     </ul>
                 </div>
             </div>
