--- a/src/app/Main/login/login.component.html
+++ b/src/app/Main/login/login.component.html
@@ -26,7 +26,7 @@
 
 <div class="login-container">
     <div class="login-box">
-      <h1 class="login-title">Create your account</h1>
+      <h1 class="login-title">Log into your Account</h1>
       <form [formGroup]="loginForm" (ngSubmit)="logins()">
         <div class="form-group">
           <input type="text" id="email" class="form-control" formControlName="email" placeholder="Email">
