--- a/src/app/Main/main-layout/main-layout.component.html
+++ b/src/app/Main/main-layout/main-layout.component.html
@@ -3,8 +3,7 @@
     <div class="row">
         <div class="col-12">
       <header>
-        
-        <nav class="navbar navbar-expand-lg navbar-light bg-white">
+        <!-- <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" (click)="jumbotronExample.toggle()"
                     aria-controls="jumbotronExample" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,18 +17,15 @@
                         <li class="nav-item">
                             <a class="nav-link" routerLink="login">Login</a>
                         </li>
-                    
+                   
                         <li class="nav-item">
                             <a class="nav-link" routerLink="signup">SignUp</a>
-                        </li>
-                    
+                        </li>                   
                     </ul>
                 </div>
             </div>
         </nav>
-        
-
-        
+         -->
 
       </header>
     </div>
