--- a/src/app/Main/signup/signup.component.html
+++ b/src/app/Main/signup/signup.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h1 class="mt-3">Create your account</h1>
-    <form #form="ngForm" (ngSubmit)="signup()">
+    <form  (ngSubmit)="signup()">
         <div class="mt-2">
 
             <div class="mt-3">
@@ -29,11 +29,7 @@
                 <input type="password" id="password " class="form-control" name="password"[(ngModel)]="model.password">
             </div>
 
-            <!-- <div class="mt-3">
-                <label  class="form-label">PhotoUrl</label>
-                <input type="text" id="photourl " class="form-control" name="photoUrl" [(ngModel)]="signupDto.photoUrl">
-            </div> -->
-           
+          
             <div class="mt-3">
                 <label  class="form-label">IdUrl</label>
                 <input type="text" id="idUrl " class="form-control" name="idUrl" [(ngModel)]="model.iDUrl">
@@ -65,9 +61,13 @@
                 <input type="text" id="zipCode " class="form-control" name="zipCode" [(ngModel)]="model.zipCode">
             </div>
            
+           
             <div class="mt-3">
-                <label  class="form-label">RoleName</label>
-                <input type="text" id="roleName " class="form-control" name="roleName" [(ngModel)]="model.roleName">
+                <label class="form-label">RoleName</label>
+                <select id="roleName" class="form-control" name="roleName" [(ngModel)]="model.roleName">
+                    <option value="User">User</option>
+                    <option value="Tenant">Tenant</option>
+                </select>
             </div>
             <div class="mt-3">
                 <label class="form-label">Image</label>
@@ -75,7 +75,7 @@
                 <img *ngIf="selectedImage" [src]="selectedImage" class="mt-2" style="max-width: 200px;" alt="Selected Image">
             </div>
 
-           
+        
             <div class="mt-3">
                 <button type="submit" class="btn btn-primary">SignUp</button>
             </div>
@@ -83,6 +83,110 @@
         </div>
     </form>
 </div>
+
+<!-- <div class="container">
+    <h1 class="mt-3">Create your account</h1>
+    <form [formGroup]="signUpForm" (ngSubmit)="signup()">
+        <div class="mt-2">
+
+            
+            <div class="mt-3">
+                <label class="form-label">First Name</label>
+                <input type="text" class="form-control" formControlName="firstName">
+            </div>
+
+          
+            <div class="mt-3">
+                <label class="form-label">Middle Name</label>
+                <input type="text" class="form-control" formControlName="middleName">
+            </div>
+
+          
+            <div class="mt-3">
+                <label class="form-label">Last Name</label>
+                <input type="text" class="form-control" formControlName="lastName">
+            </div>
+
+          
+            <div class="mt-3">
+                <label class="form-label">Email</label>
+                <input type="email" class="form-control" formControlName="email">
+            </div>
+
+        
+            <div class="mt-3">
+                <label class="form-label">Password</label>
+                <input type="password" class="form-control" formControlName="password">
+            </div>
+
+        
+            <div class="mt-3">
+                <label class="form-label">IdUrl</label>
+                <input type="text" class="form-control" formControlName="iDUrl">
+            </div>
+
+           
+            <div class="mt-3">
+                <label class="form-label">Country</label>
+                <input type="text" class="form-control" formControlName="country">
+            </div>
+
+            
+            <div class="mt-3">
+                <label class="form-label">StreetAddress1</label>
+                <input type="text" class="form-control" formControlName="streetAddress1">
+            </div>
+
+          
+            <div class="mt-3">
+                <label class="form-label">StreetAddress2</label>
+                <input type="text" class="form-control" formControlName="streetAddress2">
+            </div>
+
+           
+            <div class="mt-3">
+                <label class="form-label">City/Suburb/Town</label>
+                <input type="text" class="form-control" formControlName="citySuburbTown">
+            </div>
+
+            
+            <div class="mt-3">
+                <label class="form-label">ZipCode</label>
+                <input type="text" class="form-control" formControlName="zipCode">
+            </div>
+          
+             <div class="mt-3">
+                <label class="form-label">RoleName</label>
+                <select class="form-control" formControlName="roleName" >
+                    <option value="User">User</option>
+                    <option value="Tenant">Tenant</option>
+                </select>
+            </div>
+            
+           
+
+         
+
+            <div class="mt-3">
+                <label class="form-label">Image</label>
+                <input type="file" id="photoUrl" class="form-control-file" formControlName="photoUrl" (change)="onImageSelected($event)">
+                <img *ngIf="selectedImage" [src]="selectedImage" class="mt-2" style="max-width: 200px;" alt="Selected Image">
+            </div>
+
+
+          
+            <div class="text-danger mt-3" *ngIf="signUpForm.invalid && (signUpForm.dirty || signUpForm.touched)">
+                Please fill in all required fields.
+            </div>
+
+            <div class="mt-3">
+                <button type="submit" class="btn btn-primary">SignUp</button>
+            </div>
+
+        </div>
+    </form>
+</div> -->
+
 
 
 
