--- a/src/app/FeatureModules/admin/Property/add-property/add-property.component.scss
+++ b/src/app/FeatureModules/admin/Property/add-property/add-property.component.scss
@@ -1,5 +1,5 @@
 .property-form {
-    max-width: 400px;
+    max-width: 100%;
     margin: 0 auto;
     padding: 20px;
     background-color: #f7f7f7;
