--- a/src/app/FeatureModules/admin/admin-layout/admin-layout.component.html
+++ b/src/app/FeatureModules/admin/admin-layout/admin-layout.component.html
@@ -1,41 +1,44 @@
-
-  <div class="container">
+<div class="container">
     <div class="row">
         <div class="col-12">
-      <header>
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-white">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" (click)="jumbotronExample.toggle()"
-                    aria-controls="jumbotronExample" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-bars"></i>
-                </button>
-                <div mdbCollapse #jumbotronExample="mdbCollapse" class="collapse navbar-collapse" id="jumbotronExample">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item active">
-                            <a class="nav-link" aria-current="page" [routerLink]="['/admin']">Home</a>
-                        </li>
-                        <div *ngIf="role==='Admin'">
-                        <li class="nav-item">
-                            <a class="nav-link" [routerLink]="['/admin/property']">Property</a>
-                        </li>
-                    </div>
-                    <!-- <div *ngIf="role==='User'">
+            <header>
+                <!-- Navbar -->
+                <nav class="navbar navbar-expand-lg navbar-light bg-white">
+                    <div class="container-fluid">
+                        <button class="navbar-toggler" type="button" (click)="jumbotronExample.toggle()"
+                            aria-controls="jumbotronExample" aria-expanded="false" aria-label="Toggle navigation">
+                            <i class="fas fa-bars"></i>
+                        </button>
+                        <div mdbCollapse #jumbotronExample="mdbCollapse" class="collapse navbar-collapse"
+                            id="jumbotronExample">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item active">
+                                    <a class="nav-link" aria-current="page" [routerLink]="['/admin']">Home</a>
+                                </li>
+
+                                <li class="nav-item" *ngIf="role == 'Admin'">
+                                    <a class="nav-link" [routerLink]="['/admin/property']">Property</a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a (click)="onLogout()" class="nav-link">Logout </a>
+                                </li>
+                                <!-- <div *ngIf="role==='User'">
                         <li class="nav-item">
                             <a [routerLink]="['/admin/property/details', service.userlist.userId]" class="btn btn-primary">My Property</a>
              
                         </li>
                     </div> -->
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!-- Navbar -->
-      </header>
-    </div>
- <div class="row">
-        <div class="container">
-            <router-outlet></router-outlet>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+                <!-- Navbar -->
+            </header>
         </div>
-    
-</div>
+        <div class="row">
+            <div class="container">
+                <router-outlet></router-outlet>
+            </div>
+
+        </div>
