--- a/src/app/Main/signup/signup.component.html
+++ b/src/app/Main/signup/signup.component.html
@@ -1,81 +1,172 @@
 <div class="container">
     <h1 class="mt-3">Create your account</h1>
-    <form  (ngSubmit)="signup()">
+    <form [formGroup]="uForm" (ngSubmit)="signup()">
         <div class="mt-2">
+            <div class="row">
+                <div class="col-6">
 
-            <div class="mt-3">
-                <label  class="form-label">First Name</label>
-                <input type="text" id="firstName " class="form-control" name="firstName" [(ngModel)]="model.firstName">
-            </div>
+                    <div class="mt-3">
+                        <label class="form-label">First Name</label>
+                        <input type="text" id="firstName " class="form-control" formControlName="firstName"
+                            [ngClass]="{ 'is-invalid': submitted && uForm.controls['firstName'].errors }" />
+                        <div *ngIf="submitted && uForm.controls['firstName'].errors" class="invalid-feedback">
+                            <div *ngIf="uForm.controls['firstName'].errors['required']">First name is required</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
 
-           
-            <div class="mt-3">
-                <label  class="form-label">Middle Name</label>
-                <input type="text" id="middleName " class="form-control" name="middleName" [(ngModel)]="model.middleName">
-            </div>
-
-            <div class="mt-3">
-                <label  class="form-label">Last Name</label>
-                <input type="text" id="lastName " class="form-control" name="lastName" [(ngModel)]="model.lastName">
-            </div>
-
-            <div class="mt-3">
-                <label  class="form-label">Email</label>
-                <input type="text" id="email " class="form-control" name="email" [(ngModel)]="model.email">
-            </div>
-
-            <div class="mt-3">
-                <label  class="form-label">Password</label>
-                <input type="password" id="password " class="form-control" name="password"[(ngModel)]="model.password">
+                    <div class="mt-3">
+                        <label class="form-label">Middle Name</label>
+                        <input type="text" id="middleName " class="form-control" formControlName="middleName" />
+                    </div>
+                </div>
             </div>
 
-          
-            <div class="mt-3">
-                <label  class="form-label">IdUrl</label>
-                <input type="text" id="idUrl " class="form-control" name="idUrl" [(ngModel)]="model.iDUrl">
+            <div class="row">
+                <div class="col-6">
+                    <div class="mt-3">
+                        <label class="form-label">Last Name</label>
+                        <input type="text" id="lastName " class="form-control" formControlName="lastName"
+                            [ngClass]="{ 'is-invalid': submitted && uForm.controls['lastName'].errors }" />
+                        <div *ngIf="submitted && uForm.controls['lastName'].errors" class="invalid-feedback">
+                            <div *ngIf="uForm.controls['lastName'].errors['required']">Last name is required</div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="mt-3">
+                        <label class="form-label">Email</label>
+                        <input type="text" id="email " class="form-control" formControlName="email"
+                            [ngClass]="{'is-invalid': submitted && uForm.controls['email'].errors }" />
+                        <div *ngIf="submitted && uForm.controls['email'].errors" class="invalid-feedback">
+                            <div *ngIf="uForm.controls['email'].errors['required']">Email is required</div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
-            <div class="mt-3">
-                <label  class="form-label">Country</label>
-                <input type="text" id="country " class="form-control" name="country" [(ngModel)]="model.country">
+
+            <div class="row">
+                <div class="col-6">
+
+                    <div class="mt-3">
+                        <label class="form-label">Password</label>
+                        <input type="password" id="password " class="form-control" formControlName="password"
+                            [ngClass]="{'is-invalid': submitted && uForm.controls['password'].errors }" />
+                        <div *ngIf="submitted && uForm.controls['password'].errors" class="invalid-feedback">
+                            <div *ngIf="uForm.controls['password'].errors['required']">Password is required</div>
+                        </div>
+
+                    </div>
+
+                </div>
+                <div class="col-6">
+
+                    <div class="mt-3">
+                        <label class="form-label">Photo Url</label>
+                        <input type="text" id="iDUrl " class="form-control" formControlName="iDUrl"
+                            [ngClass]="{'is-invalid': submitted && uForm.controls['iDUrl'].errors }" />
+                        <div *ngIf="submitted && uForm.controls['iDUrl'].errors" class="invalid-feedback">
+                            <div *ngIf="uForm.controls['iDUrl'].errors['required']">Photo is required</div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+
+                    <div class="mt-3">
+                        <label class="form-label">Country</label>
+                        <input type="text" id="country " class="form-control" formControlName="country"
+                            [ngClass]="{'is-invalid': submitted && uForm.controls['country'].errors }" />
+                        <div *ngIf="submitted && uForm.controls['country'].errors" class="invalid-feedback">
+                            <div *ngIf="uForm.controls['country'].errors['required']">Country is required</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+
+                    <div class="mt-3">
+                        <label class="form-label">Street Address 1</label>
+                        <input type="text" id="streetAddress1 " class="form-control" formControlName="streetAddress1"
+                            [ngClass]="{'is-invalid': submitted && uForm.controls['streetAddress1'].errors }" />
+                        <div *ngIf="submitted && uForm.controls['streetAddress1'].errors" class="invalid-feedback">
+                            <div *ngIf="uForm.controls['streetAddress1'].errors['required']">Street Address 1 is
+                                required
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
 
-            <div class="mt-3">
-                <label  class="form-label">StreetAddress1</label>
-                <input type="text" id="streetAddress1 " class="form-control" name="streetAddress1" [(ngModel)]="model.streetAddress1">
+            <div class="row">
+                <div class="col-6">
+
+                    <div class="mt-3">
+                        <label class="form-label">StreetAddress2</label>
+                        <input type="text" id="streetAddress2 " class="form-control" formControlName="streetAddress2" />
+                    </div>
+                </div>
+
+                <div class="col-6">
+
+                    <div class="mt-3">
+                        <label class="form-label">City/Suburb/Town</label>
+                        <input type="text" id="citysuburbtown " class="form-control" formControlName="citysuburbtown"
+                            [ngClass]="{'is-invalid': submitted && uForm.controls['citysuburbtown'].errors }" />
+                        <div *ngIf="submitted && uForm.controls['citysuburbtown'].errors" class="invalid-feedback">
+                            <div *ngIf="uForm.controls['citysuburbtown'].errors['required']">City/Suburb/Town is
+                                required
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
-           
-            <div class="mt-3">
-                <label  class="form-label">StreetAddress2</label>
-                <input type="text" id="streetAddress2 " class="form-control" name="streetAddress2" [(ngModel)]="model.streetAddress2">
+            <div class="row">
+                <div class="col-6">
+
+                    <div class="mt-3">
+                        <label class="form-label">ZipCode</label>
+                        <input type="text" id="zipCode " class="form-control" formControlName="zipCode">
+                    </div>
+                </div>
+
+                <div class="col-6">
+
+                    <div class="mt-3">
+                        <label class="form-label">RoleName</label>
+                        <select id="roleName" class="form-control" formControlName="roleName"
+                            [ngClass]="{'is-invalid': submitted && uForm.controls['roleName'].errors }">
+                            <option value="User">User</option>
+                            <option value="Tenant">Tenant</option>
+                        </select>
+
+                        <div *ngIf="submitted && uForm.controls['roleName'].errors" class="invalid-feedback">
+                            <div *ngIf="uForm.controls['roleName'].errors['required']">Role name is
+                                required
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+
+                    <div class="mt-3">
+                        <label class="form-label">Image</label>
+                        <input type="file" id="photoUrl" class="form-control-file" name="photoUrl"
+                            (change)="onImageSelected($event)">
+                        <img *ngIf="selectedImage" [src]="selectedImage" class="mt-2" style="max-width: 200px;"
+                            alt="Selected Image">
+                    </div>
+                </div>
             </div>
 
-            <div class="mt-3">
-                <label  class="form-label">City/Suburb/Town</label>
-                <input type="text" id="citysuburbtown " class="form-control" name="citysuburbtown" [(ngModel)]="model.citySuburbTown">
-            </div>
-
-            <div class="mt-3">
-                <label  class="form-label">ZipCode</label>
-                <input type="text" id="zipCode " class="form-control" name="zipCode" [(ngModel)]="model.zipCode">
-            </div>
-           
-           
-            <div class="mt-3">
-                <label class="form-label">RoleName</label>
-                <select id="roleName" class="form-control" name="roleName" [(ngModel)]="model.roleName">
-                    <option value="User">User</option>
-                    <option value="Tenant">Tenant</option>
-                </select>
-            </div>
-            <div class="mt-3">
-                <label class="form-label">Image</label>
-                <input type="file" id="photoUrl" class="form-control-file" name="photoUrl" (change)="onImageSelected($event)">
-                <img *ngIf="selectedImage" [src]="selectedImage" class="mt-2" style="max-width: 200px;" alt="Selected Image">
-            </div>
-
-        
             <div class="mt-3">
                 <button type="submit" class="btn btn-primary">SignUp</button>
             </div>
@@ -186,7 +277,3 @@
         </div>
     </form>
 </div> -->
-
-
-
-
