--- a/src/app/FeatureModules/tenant-dash/tenantlayout/tenantlayout.component.html
+++ b/src/app/FeatureModules/tenant-dash/tenantlayout/tenantlayout.component.html
@@ -15,8 +15,9 @@
                             <a class="nav-link" aria-current="page" >Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" >Properties</a>
+                            <a (click)="onLogout()" class="nav-link">Logout </a>
                         </li>
+                        
                     </ul>
                 </div>
             </div>
