--- a/src/app/FeatureModules/admin/Property/property-details/property-details.component.html
+++ b/src/app/FeatureModules/admin/Property/property-details/property-details.component.html
@@ -1,11 +1,11 @@
-<app-admin-layout></app-admin-layout>
 
 <div class="container">
   <h1 class="mt-3">Property Details</h1>
   <div class="row">
     <div class="col-12">
       <div class="card mt-3">
-        <img [src]="'https://localhost:7000' + propertyDetails?.propertyImage" class="card-img-top small-image" alt="{{ propertyDetails?.propertyName }}">
+        <img [src]="'https://localhost:7000' + propertyDetails?.propertyImage" class="card-img-top small-image"
+          alt="{{ propertyDetails?.propertyName }}">
         <div class="card-body">
           <h5 class="card-title">{{ propertyDetails?.propertyName }}</h5>
           <p class="card-text">Type: {{ propertyDetails?.propertyType }}</p>
@@ -14,8 +14,8 @@
           <p class="card-text">City: {{ propertyDetails?.citySuburbTown }}</p>
           <p class="card-text">ZipCode: {{ propertyDetails?.zipPostalCode }}</p>
           <p class="card-text">Rent Cost: {{ propertyDetails?.rentCost }}</p>
-          <div *ngIf="role==='User'" >
-            <a class="btn btn-primary" [routerLink]="['/user/book/'+propertyDetails?.propertyId]" (click)="sendPropertyIdValue()">Book</a>
+          <div *ngIf="role==='User'">
+            <a class="btn btn-primary" (click)="sendPropertyIdValue()">Book</a>
           </div>
         </div>
       </div>
